pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__shared_artifact_up_to_date_status.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
ArtifactListState {
    selected_index: 0,
    selected_log_step: "Check",
    artifacts: [
        ArtifactSnapshot {
            target: "[shared]",
            target_type: "shared",
            name: "shared-secret",
            status: "UpToDate",
            has_logs: false,
        },
    ],
    error: None,
}

Rendered:
"┌Artifacts (1)────────────────────┐┌Logs: shared-secret──────────────┐"
"│> ✓ [S] shared-secret (2 targets)││No logs yet. Generate this       │"
"│                                 ││artifact to see output.          │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"└─────────────────────────────────┘│                                 │"
"j/k:nav  Enter:gen  a:all  l:log  E│                                 │"
"○ Pend ◐ Need ✎ Input ✓ OK ✗ Fail ⊘└─────────────────────────────────┘"
